src/Styles/css-stlye.css
.contain{
  box-sizing: border-box;
  padding: 0px 20px;
  width: 100% !important;
  max-width: 500px;
  margin-left: auto;
  margin-right: auto;
  background-image:  linear-gradient(180deg, rgba(23,103,245, 0.7) 30%, rgba(34,145,227, 0)),
    linear-gradient(120deg, rgba(41,143,220, 0.8), rgba(34,175,240, 0.8) 40%),
    linear-gradient(230deg, rgba(25, 100, 240, 0.9) 35%, rgba(255,255,255,0) 30%),
    linear-gradient(-35deg, rgba(25, 90, 220, 0.5) 40%, rgba(255,255,255,0) 31%);
}

.red{
  color: red;
}
.white{
  color:white !important;
}
.bdr{
  border-radius: 10px;
}
.flez{
  display: flex;
  justify-content: center;
}

.label{
  font-size: large;
  font-weight: 600;
  padding-left: 2px;
  margin-bottom: 5px;     
}

.mm{
  margin: 10px 0px;
}

.mb{
  margin-bottom: 15px;
}

.med-font{
  font-size: medium;
  font-weight: 600;
}

input{
  border-radius: 10px;
  border: none;
  width: 100%;
}
input:focus{
  border: 0px;
}

textarea{
  border-radius: 10px;
  border: none;
  width: 100%;
  max-width: 100%;
}
textarea:focus{
  border: 0px;
}
button{
  border: none;
  max-width: 200px;
  width: 65%;
  background: linear-gradient(to right, rgba(40,55,200, 0.9), rgba(40,65,200, 0.9), rgba(40,85,200, 0.9)),
  linear-gradient(to left, rgba(36, 22, 235, 0.9), rgba(40, 30, 175, 0.9));
  ;
}
.no-dec{
  text-decoration: none !important;
}

.nav{
  height: 60px;
  width: 100%;
  display: block;
  margin: 0px;
  font-size: larger;
  font-weight: 700;
  align-content: center;
  align-items: center;
  text-transform: uppercase;
  color: white;
  text-align: center;
  background: linear-gradient(to right, rgba(40,55,200, 0.9), rgba(40,65,200, 0.9), rgba(40,85,200, 0.9)),
  linear-gradient(to left, rgba(36, 22, 235, 0.9), rgba(40, 30, 175, 0.9));
  ;
}

/* .form-ground{
  width: 100%;
  max-width: 500px;
  margin-left: auto;
  margin-right: auto;
  background-image:  linear-gradient(180deg, rgba(23,103,245, 0.7) 30%, rgba(34,145,227, 0)),
    linear-gradient(120deg, rgba(41,143,220, 0.8), rgba(34,175,240, 0.8) 40%),
    linear-gradient(230deg, rgba(25, 100, 240, 0.9) 35%, rgba(255,255,255,0) 30%),
    linear-gradient(-35deg, rgba(25, 90, 220, 0.5) 40%, rgba(255,255,255,0) 31%);		
} */

